objects/PC_Program_Coverage__c.object
<CustomObject>
    <description>This is a custom object in Patient Connect that represents patient&apos;s coverage information that satisfies the coverage for the treatment/program that the patient is enrolled into.</description>
    <fields>
        <fullName>ACLS_AOB_MD_Purchase__c</fullName>
        <label>AOB/MD Purchase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AOB</fullName>
                </value>
                <value>
                    <fullName>MD Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Additional_Information__c</fullName>
        <description>Additional Information</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_Administration_Copay_Amount_Percent__c</fullName>
        <label>Administration Copay Amount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACLS_Administration_Copay_Amount__c</fullName>
        <label>Administration Copay Amount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACLS_Annual_Cap__c</fullName>
        <label>Annual Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACLS_Billing_and_Coding__c</fullName>
        <description>Billing and Coding</description>
        <label>Billing and Coding</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_Coverage_Source__c</fullName>
        <label>Coverage Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Automated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Does_Deductible_Apply_to_OOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Deductible Apply to OOP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACLS_Effective_From__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACLS_Has_Mandatory_Contracted_SP__c</fullName>
        <label>Has Mandatory Contracted SP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Is_Product_on_Formulary__c</fullName>
        <label>Is Product on Formulary?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Office_Visit_Copay_Amount_Percent__c</fullName>
        <label>Office Visit Copay Amount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACLS_Office_Visit_Copay_Amount__c</fullName>
        <label>Office Visit Copay Amount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACLS_PA_Approval_Number__c</fullName>
        <label>PA Approval Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACLS_PA_Fax__c</fullName>
        <label>PA Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ACLS_PA_Outcome__c</fullName>
        <label>PA Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_PA_Phone__c</fullName>
        <label>PA Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ACLS_Prior_Authorization_Details__c</fullName>
        <description>Prior Authorization Details</description>
        <label>Prior Authorization Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_Product_Copay_Amount_Percent__c</fullName>
        <label>Product Copay Amount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACLS_Product_Copay_Amount__c</fullName>
        <label>Product Copay Amount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACLS_Product_Formulary_Tier__c</fullName>
        <label>Product Formulary Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Reference_Number__c</fullName>
        <displayFormat>PC-{000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ACLS_Representative_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Representative Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Program_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLS_Site_of_Care__c</fullName>
        <label>Site of Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Physician Office</fullName>
                </value>
                <value>
                    <fullName>HOP</fullName>
                </value>
                <value>
                    <fullName>Infusion Center</fullName>
                </value>
                <value>
                    <fullName>Long Term Care</fullName>
                </value>
                <value>
                    <fullName>Nursing Home</fullName>
                </value>
                <value>
                    <fullName>Home Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Specialty_Pharmacy__c</fullName>
        <label>Specialty Pharmacy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Year_Plan__c</fullName>
        <label>Year Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_eBV_Additional_Information__c</fullName>
        <label>eBV Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_eBV_Coverage_Status__c</fullName>
        <label>eBV Coverage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Covered - Commercial</fullName>
                </value>
                <value>
                    <fullName>Covered - Government</fullName>
                </value>
                <value>
                    <fullName>Covered with PA</fullName>
                </value>
                <value>
                    <fullName>Too Soon to Fill</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>Unable to Determine Coverage</fullName>
                </value>
                <value>
                    <fullName>Unable to Determine Eligibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_eBV_Transaction_Unique_ID__c</fullName>
        <label>eBV Transaction Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Required__c</fullName>
        <description>Flagged, if the payer requires a prior authorization.</description>
        <label>PA Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Decision_Date_1__c</fullName>
        <description>The date of the first possible alternate funding source decision.</description>
        <label>Decision Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Decision_Date_2__c</fullName>
        <description>The date of the second possible alternate funding source decision.</description>
        <label>Decision Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Denial_Reason_2__c</fullName>
        <description>The reason for the denial of the second possible alternative funding source.</description>
        <label>Denial Reason 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Denial_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Outcome_1__c</fullName>
        <description>The outcome of the first possible alternate funding source.</description>
        <label>Outcome 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Outcome_2__c</fullName>
        <description>The outcome of the second possible alternate funding source.</description>
        <label>Outcome 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Outcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Referral_Contact_1__c</fullName>
        <description>The contact name of the first possible alternate funding source.</description>
        <label>Referral Contact 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Referral_Contact_2__c</fullName>
        <description>The contact name of the second possible alternate funding source.</description>
        <label>Referral Contact 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Referral_Date_1__c</fullName>
        <description>The date of the first possible alternate funding source referral.</description>
        <label>Referral Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Referral_Date_2__c</fullName>
        <description>The date of the second possible alternate funding source referral.</description>
        <label>Referral Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Referral_Phone_2__c</fullName>
        <description>The contact phone of the second possible alternate funding source.</description>
        <label>Referral Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_Alt_Fund_Referral_Phone__c</fullName>
        <description>The contact phone of the first possible alternate funding source.</description>
        <label>Referral Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_Alternate_Funding_Source_2__c</fullName>
        <description>The second possible source of alternate funding.</description>
        <label>Alternate Funding Source 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Alternate_Funding__c</fullName>
        <description>The first possible source of alternate funding.</description>
        <label>Alternate Funding Source 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Annual_Household_Income__c</fullName>
        <description>The annual household income category.</description>
        <label>Annual Household Income?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greater than $45,000</fullName>
                </value>
                <value>
                    <fullName>30,0000 to 45,000</fullName>
                </value>
                <value>
                    <fullName>Less than $30,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Annual_Out_of_Pocket__c</fullName>
        <description>The amount the patient has paid for covered services in a plan year. Once the maximum amount is reached by spending on deductibles, copayments, and coinsurance, the health plan pays 100% of the cost of the covered benefits.</description>
        <label>Annual Out of Pocket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Appeal_Available__c</fullName>
        <description>Used to indicate if the appeal can be made if this coverage is refused.</description>
        <label>Appeal Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Clinic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the associated Clinic information</description>
        <label>Clinic</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>HCO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Coverage (Clinic)</relationshipLabel>
        <relationshipName>Program_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Coinsurance_Percent__c</fullName>
        <description>The percentage of cost of a covered health care service that the patient pays after deductible is paid.</description>
        <label>Coinsurance %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_Comments__c</fullName>
        <description>The comments about the coverage.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_CompletionStatus__c</fullName>
        <description>Indicates the Medical Benefit&apos;s Completion Status</description>
        <label>Completion Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_CoordinatedPlanBenefits__c</fullName>
        <description>Indicates Plan Benefits Details</description>
        <label>Coordinated Plan Benefits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Copay_Amount__c</fullName>
        <description>The amount the patient pays.</description>
        <label>Copay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Copay_Assistance_Amount__c</fullName>
        <description>The amount of assistance that is provided towards the patient&apos;s copay.</description>
        <label>Copay Assistance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Copay_Card_Expiration_Date__c</fullName>
        <description>The copay card&apos;s expiration date.</description>
        <label>Copay Card Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Copay_Card_Group_No__c</fullName>
        <description>The group number of the copay card.</description>
        <label>Copay Card Group No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Copay_Card_No__c</fullName>
        <description>The Identification number of the card.</description>
        <label>Copay Card No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Copay_Card_Rx_BIN_No__c</fullName>
        <description>Copay Card&apos;s Rx BIN Number.</description>
        <label>Copay Card Rx BIN No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Copay_Card_Status__c</fullName>
        <description>The status of the copay card.</description>
        <label>Copay Card Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Copay_Office_Visit_Amt__c</fullName>
        <description>Co-pay amount to be paid during the office visit.</description>
        <label>Office Visit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Copy_Procedure_Amt__c</fullName>
        <description>Co-pay amount to be paid for the procedure.</description>
        <label>Product/Procedure Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Coverage_Percentage__c</fullName>
        <description>The percent of the program&apos;s medication cost covered by the Health Plan or other funding.</description>
        <label>Coverage %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_Coverage_Status__c</fullName>
        <description>The status of the coverage.</description>
        <label>Coverage Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Coverage_Type__c</fullName>
        <description>Displays the record type information on screen. The record type field can be hidden as well. 

Note: Users should not be able to change the record type after creation.</description>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Funding</fullName>
                </value>
                <value>
                    <fullName>Private Coverage</fullName>
                </value>
                <value>
                    <fullName>Copay Assistance</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Plan Coverage</fullName>
                </value>
                <value>
                    <fullName>Medicare A/B</fullName>
                </value>
                <value>
                    <fullName>Medicare D</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>Tricare</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>Charitable Organization</fullName>
                </value>
                <value>
                    <fullName>Discount Card</fullName>
                </value>
                <value>
                    <fullName>Manufacturer Copay Card</fullName>
                </value>
                <value>
                    <fullName>Public Coverage</fullName>
                    <isActive>false</isActive>
                    <label>Public Coverage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Days_Priced__c</fullName>
        <description>Describes the number of days supply for medication that the pricing is returned for by third party service</description>
        <label>Days Priced</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Deductible__c</fullName>
        <description>The amount patient has to pay as deductible.</description>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines the eligibility based on annual household income range.</description>
        <label>Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Expiration_Date__c</fullName>
        <description>Tracks when the Coverage Expires in order to re-run an investigation.</description>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Group_Number__c</fullName>
        <description>The group number of the associated health plan.</description>
        <formula>PC_Health_Plan__r.Group_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Health_Plan_Status__c</fullName>
        <description>The status of the health plan.</description>
        <formula>TEXT (PC_Health_Plan__r.PC_Plan_Status__c)</formula>
        <label>Health Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Health_Plan_Type__c</fullName>
        <description>The type of associated health plan - Public or Private.</description>
        <formula>TEXT( PC_Health_Plan__r.PC_Plan_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Health_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The patient&apos;s health plan that provides the coverage.</description>
        <label>Health Plan</label>
        <referenceTo>PC_Health_Plan__c</referenceTo>
        <relationshipLabel>Program Coverages</relationshipLabel>
        <relationshipName>Program_Coverages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_ID_Policy_No__c</fullName>
        <description>Policy number of the Health Plan.</description>
        <formula>PC_Health_Plan__r.ID_Policy_No__c</formula>
        <label>ID / Policy No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Meets_qualifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked/selected if the patient meets the copay assistance qualifications.</description>
        <label>Meets qualifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Number_of_children_under_18_years_old__c</fullName>
        <description>The question that determines the coverage eligibility.</description>
        <label>Number of children under 18 years old?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Number_of_dependent_seniors__c</fullName>
        <description>The question that determines the coverage eligibility.</description>
        <label>Number of dependent seniors?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_Option_1_Copay_Amount__c</fullName>
        <description>The copay amount of option 1.</description>
        <label>Option 1 Copay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Option_1_Copay_Percent__c</fullName>
        <description>The copay as percentage for option 1.</description>
        <label>Option 1 Copay %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_Option_2_Copay_Amount__c</fullName>
        <description>The copay amount of option 2.</description>
        <label>Option 2 Copay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Option_2_Copay__c</fullName>
        <description>The copay as percentage for option 2.</description>
        <label>Option 2 Copay %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_Original_Deductible_Amt_Family__c</fullName>
        <description>Original deductible amount for the family deductible (when applicable based on health plan)</description>
        <label>Original Deductible Amount Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Original_Deductible_Amt_Individual__c</fullName>
        <description>Original deductible value for the individual deductible (when individual and family deductibles are applicable based on health plan)</description>
        <label>Original Deductible Amount Individual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Patient__c</fullName>
        <description>The name of the patient associated with the coverage.</description>
        <formula>PC_Program__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Payer_Name__c</fullName>
        <description>The name of the health plan payer.</description>
        <formula>PC_Health_Plan__r.PC_Payer__r.Name</formula>
        <label>Payer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Payer_Phone__c</fullName>
        <description>The health plan payer’s phone number.</description>
        <formula>PC_Health_Plan__r.PC_Payer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Payer__c</fullName>
        <description>The name of the health plan payer.</description>
        <formula>PC_Health_Plan__r.PC_Payer__r.Name</formula>
        <label>Payer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Pharmacy_Name__c</fullName>
        <description>The name of the pharmacy associated with patient’s coverage.</description>
        <formula>PC_Pharmacy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pharmacy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Pharmacy_Phone__c</fullName>
        <description>The phone number of the pharmacy associated with the patient’s coverage.</description>
        <formula>PC_Pharmacy__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pharmacy Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Pharmacy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The health plan payer’s phone number.</description>
        <label>Pharmacy</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Coverage (Pharmacy)</relationshipLabel>
        <relationshipName>Selected_for_Program_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Prescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The prescription associated with the program coverage record</description>
        <label>Prescription</label>
        <referenceTo>PC_Prescription__c</referenceTo>
        <relationshipLabel>Program Coverage</relationshipLabel>
        <relationshipName>Program_Coverage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Program_Coverage__c</fullName>
        <description>The outcome status of the coverage.</description>
        <label>Program Coverage Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Pending</fullName>
                </value>
                <value>
                    <fullName>Investigation In Progress</fullName>
                </value>
                <value>
                    <fullName>Eligibility Pending</fullName>
                </value>
                <value>
                    <fullName>Pending PA</fullName>
                </value>
                <value>
                    <fullName>Covered</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Appeal</fullName>
                </value>
                <value>
                    <fullName>Patient Declined</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Not Covered</fullName>
                </value>
                <value>
                    <fullName>Triaged</fullName>
                </value>
                <value>
                    <fullName>Created in Error</fullName>
                </value>
                <value>
                    <fullName>Sources Not Found</fullName>
                </value>
                <value>
                    <fullName>Covered with Restrictions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Program__c</fullName>
        <description>The program to which the patient is enrolled into and requires coverage for.</description>
        <label>Program</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Case.Type</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Program Coverage</relationshipLabel>
        <relationshipName>Program_Coverages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Quantity_Priced__c</fullName>
        <description>Describes the quantity of medication that the pricing is returned for by third party service</description>
        <label>Quantity Priced</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>